@@ -44,7 +44,7 @@ To override EEPROM settings with config settings, set EEPROM_MODE 0 */
 
 /** \brief Define the type of your device */
 //#define MOTHERBOARD                         DEVICE_TYPE_RF1000
-//#define MOTHERBOARD                         DEVICE_TYPE_RF2000
+#define MOTHERBOARD                         DEVICE_TYPE_RF2000
 //#define MOTHERBOARD                         DEVICE_TYPE_RF2000v2
 
 #ifndef MOTHERBOARD
@@ -666,6 +666,10 @@ Values must be in range 1..255 */
 #define BEEPER_START_WORK_PART_SCAN_SEQUENCE    100,2
 #define BEEPER_ABORT_WORK_PART_SCAN_SEQUENCE    250,5
 #define BEEPER_STOP_WORK_PART_SCAN_SEQUENCE     100,3
+//FEATURE_ALIGN_EXTRUDERS
+ #define BEEPER_START_ALIGN_EXTRUDERS_SEQUENCE  100,2
+ #define BEEPER_ABORT_ALIGN_EXTRUDERS_SEQUENCE  250,5
+ #define BEEPER_STOP_ALIGN_EXTRUDERS_SEQUENCE   100,3
 #define BEEPER_ABORT_SET_POSITION_SEQUENCE      250,5
 #define BEEPER_ACCEPT_SET_POSITION_SEQUENCE     100,2
 #define BEEPER_SERVICE_INTERVALL_SEQUNCE        100,3
@@ -943,7 +947,7 @@ and it is elsewise difficult to know, what your reprap is currently doing. */
 
 
 /** \brief For Nibbels external interrupt 3 plus an extra pin is used for reading digital calipers. You will have to solder some logic-converter from 1.8v to 5v see http://www.instructables.com/id/Reading-Digital-Callipers-with-an-Arduino-USB/ */
-#define FEATURE_READ_CALIPER               0                                                   // 0 = OFF, 1 = ON
+#define FEATURE_READ_CALIPER               1                                                   // 0 = OFF, 1 = ON
 #define FEATURE_READ_CALIPER_INT_PIN       RESERVE_DIGITAL_PIN_PD3                             // RF2000/RF1000: RESERVE_DIGITAL_PIN_PD3 is INT3 for having clocks falling edges collected
 #define FEATURE_READ_CALIPER_DATA_PIN      RESERVE_DIGITAL_PIN_PE4                             // RF2000: RESERVE_DIGITAL_PIN_PE4 is some reserve pin for reading off data while clocks falling edge.
 #if FEATURE_READ_CALIPER && MOTHERBOARD == DEVICE_TYPE_RF1000 && FEATURE_READ_CALIPER_DATA_PIN == RESERVE_DIGITAL_PIN_PE4
