@@ -199,6 +199,9 @@
 #define UI_ACTION_FLOW_DF                   1704
 #define UI_ACTION_FLOW_DV                   1705
 
+//FEATURE_ALIGN_EXTRUDERS
+#define UI_ACTION_ALIGN_EXTRUDERS           1706
+
 #define UI_ACTION_FET1_OUTPUT               2001
 #define UI_ACTION_FET2_OUTPUT               2002
 
@@ -675,6 +678,10 @@ void ui_check_slow_keys(int &action) {
 #define BEEP_START_WORK_PART_SCAN {}
 #define BEEP_ABORT_WORK_PART_SCAN {}
 #define BEEP_STOP_WORK_PART_SCAN {}
+// FEATURE_ALIGN_EXTRUDERS
+ #define BEEP_START_ALIGN_EXTRUDERS {}
+ #define BEEP_ABORT_ALIGN_EXTRUDERS {}
+ #define BEEP_STOP_ALIGN_EXTRUDERS {}
 #define BEEP_ABORT_SET_POSITION {}
 #define BEEP_ACCEPT_SET_POSITION {}
 #define BEEP_SERVICE_INTERVALL {}
@@ -694,6 +701,10 @@ void ui_check_slow_keys(int &action) {
 #define BEEP_START_WORK_PART_SCAN beep(BEEPER_START_WORK_PART_SCAN_SEQUENCE);
 #define BEEP_ABORT_WORK_PART_SCAN beep(BEEPER_ABORT_WORK_PART_SCAN_SEQUENCE);
 #define BEEP_STOP_WORK_PART_SCAN beep(BEEPER_STOP_WORK_PART_SCAN_SEQUENCE);
+// FEATURE_ALIGN_EXTRUDERS
+ #define BEEP_START_ALIGN_EXTRUDERS beep(BEEPER_START_ALIGN_EXTRUDERS_SEQUENCE);
+ #define BEEP_ABORT_ALIGN_EXTRUDERS beep(BEEPER_ABORT_ALIGN_EXTRUDERS_SEQUENCE);
+ #define BEEP_STOP_ALIGN_EXTRUDERS beep(BEEPER_STOP_ALIGN_EXTRUDERS_SEQUENCE);
 #define BEEP_ABORT_SET_POSITION beep(BEEPER_ABORT_SET_POSITION_SEQUENCE);
 #define BEEP_ACCEPT_SET_POSITION beep(BEEPER_ACCEPT_SET_POSITION_SEQUENCE);
 #define BEEP_SERVICE_INTERVALL beep(BEEPER_SERVICE_INTERVALL_SEQUNCE);
