@@ -1,6 +1,11 @@
 TODO: Z-Lift-Bug seems to be still present! Avoid Z-Lift: Todo @Conrad -> Has this possibly been fixed by removing halfstepping in 1.37u4?
 TODO: Testing, testing ..
 
+- added renkforce feature FEATURE_ALIGN_EXTRUDERS
+- fixed details in FEATURE_ALIGN_EXTRUDERS
+- added menu support: Configuration -> Z-Compensation -> Align Extruders
+- added autoresolving errors by homing -> align extruders will then move to old hbs align position if you dont set manual x and y (which is possible if you dont move z out of 0!)
+
 V RF.01.38.Mod (2017-12-28)
 - improved ZOS handling
 - testimprovement for HBS (take back push in force by driving back in very tiny steps)
